{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 13,
  "lineage": "08a2be2a-880a-f288-3856-7c4c6762385d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09f9d773751b9d606",
            "arn": "arn:aws:ec2:us-east-1:100061436965:instance/i-044e73c34589e510c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-044e73c34589e510c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair-test",
            "monitoring": false,
            "primary_network_interface_id": "eni-037e18f38b3848680",
            "private_dns": "ip-10-10-1-221.ec2.internal",
            "private_ip": "10.10.1.221",
            "public_dns": "ec2-54-82-250-98.compute-1.amazonaws.com",
            "public_ip": "54.82.250.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c30d85f98de5c411",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eda465d5230ef11e",
            "tags": {
              "Environment": "test",
              "Name": "ec2-test",
              "ServerType": "ec2-test",
              "Stage": "test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ce4f99569bdbe75a"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.keypair_test",
            "module.ec2.aws_security_group.ec2_sg_test",
            "module.network.aws_subnet.subnet_test",
            "module.network.aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a325719e505fb623",
            "owner_id": "100061436965",
            "tags": {
              "Name": "internet-gateway-test",
              "Stage": "test"
            },
            "vpc_id": "vpc-09e39cb2c16587e27"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0937a40c5ea1a6f92",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "100061436965",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0eda465d5230ef11e"
            ],
            "tags": {
              "Name": "acl-test",
              "Stage": "test"
            },
            "vpc_id": "vpc-09e39cb2c16587e27"
          },
          "dependencies": [
            "module.network.aws_subnet.subnet_test",
            "module.network.aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00e72e44d37b6a27e",
            "owner_id": "100061436965",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a325719e505fb623",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-test",
              "Stage": "test"
            },
            "vpc_id": "vpc-09e39cb2c16587e27"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway_test",
            "module.network.aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043c4dc56ad2d1e4a",
            "route_table_id": "rtb-00e72e44d37b6a27e",
            "subnet_id": "subnet-0eda465d5230ef11e"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway_test",
            "module.network.aws_route_table.route_test",
            "module.network.aws_subnet.subnet_test",
            "module.network.aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:100061436965:security-group/sg-0ce4f99569bdbe75a",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce4f99569bdbe75a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security-group-ec2-test",
            "name_prefix": null,
            "owner_id": "100061436965",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group-ec2-test",
              "Stage": "test",
              "Type": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e39cb2c16587e27"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_test",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:100061436965:subnet/subnet-0eda465d5230ef11e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0eda465d5230ef11e",
            "map_public_ip_on_launch": true,
            "owner_id": "100061436965",
            "tags": {
              "Name": "subnet-1-test",
              "Stage": "test"
            },
            "vpc_id": "vpc-09e39cb2c16587e27"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:100061436965:vpc/vpc-09e39cb2c16587e27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-007cfd5f52a085ff8",
            "default_route_table_id": "rtb-0b486bef21739aba3",
            "default_security_group_id": "sg-058e5eefecf2b31db",
            "dhcp_options_id": "dopt-beec59c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09e39cb2c16587e27",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b486bef21739aba3",
            "owner_id": "100061436965",
            "tags": {
              "Name": "vpc-test",
              "Stage": "test"
            }
          }
        }
      ]
    }
  ]
}